--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <article>
         <div class="face">
+            <div class="eye eye-left"></div>
+            <div class="eye eye-right"></div>
         </div>
     </article>
 </body>
