속눈썹 라인

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <article>
         <div class="face">
-            <div class="eye eye-left"></div>
-            <div class="eye eye-right"></div>
+            <div class="eye eye-left">
+                <div class="eyelash eyelash-left"></div>
+            </div>
+            <div class="eye eye-right">
+                <div class="eyelash eyelash-right"></div>
+            </div>
         </div>
     </article>
 </body>
