--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="eye eye-right">
                 <div class="eyelash eyelash-right"></div>
             </div>
+            <div class="nose"></div>
         </div>
     </article>
 </body>
