--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <div class="eye eye-right">
                 <div class="eyelash eyelash-right"></div>
             </div>
-            <div class="nose"></div>
+            <div class="nose">
+            </div>
+            <div class="mouth">
+            </div>
         </div>
     </article>
 </body>
