--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             </div>
             <div class="mouth">
             </div>
+            <div class="ear ear-left">
+
+            </div>
+            <div class="ear ear-right">
+                
+            </div>
         </div>
     </article>
 </body>
