--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <article>
+        <div class="back-hair">
+            <div class="back-long-hair"></div>
+        </div>
+        <div class="ear ear-left">
+        </div>
+        <div class="ear ear-right">
+        </div>
         <div class="face">
             <div class="eye eye-left">
                 <div class="eyelash eyelash-left"></div>
@@ -19,12 +26,6 @@
             <div class="nose">
             </div>
             <div class="mouth">
-            </div>
-            <div class="ear ear-left">
-
-            </div>
-            <div class="ear ear-right">
-                
             </div>
         </div>
     </article>
