--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <article>
-        <div class="back-hair">
-            <div class="back-long-hair"></div>
+        <div class="hair">
+            <div class="back-long-hair">
+            </div>
+            <div class="bang">
+            </div>
         </div>
         <div class="ear ear-left">
         </div>
