--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <div class="face">
             <div class="eye eye-left">
                 <div class="eyelash eyelash-left"></div>
+                <div class="eyebrow eyebrow-left">
+                </div>
             </div>
             <div class="eye eye-right">
                 <div class="eyelash eyelash-right"></div>
+                <div class="eyebrow eyebrow-right"></div>
             </div>
             <div class="nose">
             </div>
