--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
             <div class="mouth">
             </div>
+            <div class="inner-mouth"></div>
         </div>
     </article>
 </body>
