--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <div class="mouth">
             </div>
             <div class="inner-mouth"></div>
+            <div class="chin chin-left"></div>
+            <div class="chin chin-right"></div>
         </div>
     </article>
 </body>
